# compose_rs_bindings

./: Cargo.toml  README.md  example.py  pyproject.toml
.github/workflows/: CI.yml  regenerate-models.yml
compose_spec/: __init__.py  __init__.pyi  models.py
src/: lib.rs
tests/: test_bindings.py
