[package]
name = "compose_rs_bindings"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "compose_rs_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
compose_spec = { version = "^0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[package.metadata]
rust-version = "1.70"
indexmap = "2"
