[package]
name = "compose_spec_bindings"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Python bindings for compose_spec"
license = "MIT OR Apache-2.0"

[lib]
name = "compose_spec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "experimental-inspect"] }
compose_spec_crate = { version = "^0.3", default-features = false, package = "compose_spec" }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
