[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "compose-spec"
description = "Python bindings for compose_spec — validated Docker Compose file parsing and serialization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = ["pydantic>=2.0"]

[tool.datamodel-codegen]
input = "schema.json"
input-file-type = "jsonschema"
output = "compose_spec/models.py"
output-model-type = "pydantic_v2.BaseModel"
extra-fields = "ignore"
field-constraints = true
snake-case-field = true
target-python-version = "3.10"
use-subclass-enum = true
use-unique-items-as-set = true
use-double-quotes = true
disable-future-imports = true
disable-timestamp = true
naming-strategy = "parent-prefixed"
